# QtOpengl-Tutorial

./: .gitignore  readme.md  readme_zh.md
01_ColoredTriangle/: CMakeLists.txt  openglwidget.cpp
02_IndexedQuad/: CMakeLists.txt  main.cpp  openglwidget.cpp  openglwidget.h
03_TexturedQuad/: CMakeLists.txt  openglwidget.cpp  openglwidget.h
04_3DCube_DrawArrays/: CMakeLists.txt  main.cpp  openglwidget.cpp  openglwidget.h
05_3DCube_DrawElements/: CMakeLists.txt  main.cpp  openglwidget.cpp  openglwidget.h
06_3D_TexturedCube/: CMakeLists.txt  main.cpp  openglwidget.cpp  openglwidget.h
